Fix : CSS alignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,7 +45,11 @@ img {
 }
 @media screen and (max-width: 1023px) {
   .solidDiv {
+    width: 100%;
     height: 28rem;
-    width: 94vw;
+  }
+  .solidDivWrapper {
+    margin: 0;
+    width: 100%;
   }
 }
